// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`within timeEntriesSelectors the selectors match their snapshots for the includedSourceTimeEntriesSelector 1`] = `
Array [
  Object {
    "clientId": "3002",
    "description": "This is a test entry (04)",
    "end": 2019-06-23T17:05:20.000Z,
    "entryCount": 0,
    "id": "8004",
    "isActive": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "start": 2019-06-23T14:00:20.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3002",
    "description": "This is a test entry (05)",
    "end": 2019-06-22T19:15:19.000Z,
    "entryCount": 0,
    "id": "8005",
    "isActive": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "start": 2019-06-22T14:00:19.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
]
`;

exports[`within timeEntriesSelectors the selectors match their snapshots for the sourceTimeEntriesForTransferSelector 1`] = `
Array [
  Object {
    "clientId": "3002",
    "description": "This is a test entry (04)",
    "end": 2019-06-23T17:05:20.000Z,
    "entryCount": 0,
    "id": "8004",
    "isActive": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "start": 2019-06-23T14:00:20.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3002",
    "description": "This is a test entry (05)",
    "end": 2019-06-22T19:15:19.000Z,
    "entryCount": 0,
    "id": "8005",
    "isActive": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "start": 2019-06-22T14:00:19.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
]
`;

exports[`within timeEntriesSelectors the selectors match their snapshots for the sourceTimeEntriesInActiveWorkspaceSelector 1`] = `
Array [
  Object {
    "clientId": "3001",
    "description": "This is a test entry (01)",
    "end": 2019-06-25T23:00:00.000Z,
    "entryCount": 0,
    "id": "8001",
    "isActive": false,
    "isBillable": false,
    "isIncluded": false,
    "linkedId": "clock-entry-01",
    "memberOf": "timeEntries",
    "projectId": "2001",
    "start": 2019-06-25T18:00:00.000Z,
    "tagIds": Array [
      "4001",
      "4002",
    ],
    "tagNames": Array [
      "tag-a",
      "tag-b",
    ],
    "taskId": "7001",
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3001",
    "description": "This is a test entry (02)",
    "end": 2019-06-24T22:00:00.000Z,
    "entryCount": 0,
    "id": "8002",
    "isActive": false,
    "isBillable": false,
    "isIncluded": false,
    "linkedId": "clock-entry-02",
    "memberOf": "timeEntries",
    "projectId": "2001",
    "start": 2019-06-24T14:00:00.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": "7001",
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3001",
    "description": "This is a test entry (03)",
    "end": 2019-06-24T04:30:00.000Z,
    "entryCount": 0,
    "id": "8003",
    "isActive": false,
    "isBillable": false,
    "isIncluded": false,
    "linkedId": "clock-entry-03",
    "memberOf": "timeEntries",
    "projectId": "2001",
    "start": 2019-06-23T14:30:00.000Z,
    "tagIds": Array [
      "4003",
    ],
    "tagNames": Array [
      "tag-c",
    ],
    "taskId": "7002",
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3002",
    "description": "This is a test entry (04)",
    "end": 2019-06-23T17:05:20.000Z,
    "entryCount": 0,
    "id": "8004",
    "isActive": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "start": 2019-06-23T14:00:20.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3002",
    "description": "This is a test entry (05)",
    "end": 2019-06-22T19:15:19.000Z,
    "entryCount": 0,
    "id": "8005",
    "isActive": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "start": 2019-06-22T14:00:19.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
]
`;

exports[`within timeEntriesSelectors the selectors match their snapshots for the sourceTimeEntryCountByTagIdSelector 1`] = `
Object {
  "4001": 1,
  "4002": 1,
  "4003": 1,
}
`;

exports[`within timeEntriesSelectors the selectors match their snapshots for the timeEntriesTotalCountsByTypeSelector 1`] = `
Object {
  "existsInTarget": 3,
  "isIncluded": 2,
}
`;

exports[`within timeEntriesSelectors the sourceTimeEntryCountByIdFieldSelectorFactory matches its snapshot 1`] = `Object {}`;

exports[`within timeEntriesSelectors the timeEntriesForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown when state.allEntities.areExistsInTargetShown = false 1`] = `
Array [
  Object {
    "clientId": "3002",
    "description": "This is a test entry (04)",
    "end": 2019-06-23T17:05:20.000Z,
    "entryCount": 0,
    "existsInTarget": false,
    "id": "8004",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "projectName": "Test Project B",
    "start": 2019-06-23T14:00:20.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "taskName": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3002",
    "description": "This is a test entry (05)",
    "end": 2019-06-22T19:15:19.000Z,
    "entryCount": 0,
    "existsInTarget": false,
    "id": "8005",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "projectName": "Test Project B",
    "start": 2019-06-22T14:00:19.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "taskName": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
]
`;

exports[`within timeEntriesSelectors the timeEntriesForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown when state.allEntities.areExistsInTargetShown = true 1`] = `
Array [
  Object {
    "clientId": "3001",
    "description": "This is a test entry (01)",
    "end": 2019-06-25T23:00:00.000Z,
    "entryCount": 0,
    "existsInTarget": true,
    "id": "8001",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "linkedId": "clock-entry-01",
    "memberOf": "timeEntries",
    "projectId": "2001",
    "projectName": "Test Project A",
    "start": 2019-06-25T18:00:00.000Z,
    "tagIds": Array [
      "4001",
      "4002",
    ],
    "tagNames": Array [
      "tag-a",
      "tag-b",
    ],
    "taskId": "7001",
    "taskName": "Task 1",
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3001",
    "description": "This is a test entry (02)",
    "end": 2019-06-24T22:00:00.000Z,
    "entryCount": 0,
    "existsInTarget": true,
    "id": "8002",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "linkedId": "clock-entry-02",
    "memberOf": "timeEntries",
    "projectId": "2001",
    "projectName": "Test Project A",
    "start": 2019-06-24T14:00:00.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": "7001",
    "taskName": "Task 1",
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3001",
    "description": "This is a test entry (03)",
    "end": 2019-06-24T04:30:00.000Z,
    "entryCount": 0,
    "existsInTarget": true,
    "id": "8003",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "linkedId": "clock-entry-03",
    "memberOf": "timeEntries",
    "projectId": "2001",
    "projectName": "Test Project A",
    "start": 2019-06-23T14:30:00.000Z,
    "tagIds": Array [
      "4003",
    ],
    "tagNames": Array [
      "tag-c",
    ],
    "taskId": "7002",
    "taskName": "Task 2",
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3002",
    "description": "This is a test entry (04)",
    "end": 2019-06-23T17:05:20.000Z,
    "entryCount": 0,
    "existsInTarget": false,
    "id": "8004",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "projectName": "Test Project B",
    "start": 2019-06-23T14:00:20.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "taskName": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3002",
    "description": "This is a test entry (05)",
    "end": 2019-06-22T19:15:19.000Z,
    "entryCount": 0,
    "existsInTarget": false,
    "id": "8005",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "projectName": "Test Project B",
    "start": 2019-06-22T14:00:19.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "taskName": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
]
`;

exports[`within timeEntriesSelectors the timeEntriesForInclusionsTableSelector matches its snapshot when state.isDuplicateCheckEnabled = false 1`] = `
Array [
  Object {
    "clientId": "3001",
    "description": "This is a test entry (01)",
    "end": 2019-06-25T23:00:00.000Z,
    "entryCount": 0,
    "existsInTarget": false,
    "id": "8001",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "linkedId": "clock-entry-01",
    "memberOf": "timeEntries",
    "projectId": "2001",
    "projectName": "Test Project A",
    "start": 2019-06-25T18:00:00.000Z,
    "tagIds": Array [
      "4001",
      "4002",
    ],
    "tagNames": Array [
      "tag-a",
      "tag-b",
    ],
    "taskId": "7001",
    "taskName": "Task 1",
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3001",
    "description": "This is a test entry (02)",
    "end": 2019-06-24T22:00:00.000Z,
    "entryCount": 0,
    "existsInTarget": false,
    "id": "8002",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "linkedId": "clock-entry-02",
    "memberOf": "timeEntries",
    "projectId": "2001",
    "projectName": "Test Project A",
    "start": 2019-06-24T14:00:00.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": "7001",
    "taskName": "Task 1",
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3001",
    "description": "This is a test entry (03)",
    "end": 2019-06-24T04:30:00.000Z,
    "entryCount": 0,
    "existsInTarget": false,
    "id": "8003",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "linkedId": "clock-entry-03",
    "memberOf": "timeEntries",
    "projectId": "2001",
    "projectName": "Test Project A",
    "start": 2019-06-23T14:30:00.000Z,
    "tagIds": Array [
      "4003",
    ],
    "tagNames": Array [
      "tag-c",
    ],
    "taskId": "7002",
    "taskName": "Task 2",
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3002",
    "description": "This is a test entry (04)",
    "end": 2019-06-23T17:05:20.000Z,
    "entryCount": 0,
    "existsInTarget": false,
    "id": "8004",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "projectName": "Test Project B",
    "start": 2019-06-23T14:00:20.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "taskName": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
  Object {
    "clientId": "3002",
    "description": "This is a test entry (05)",
    "end": 2019-06-22T19:15:19.000Z,
    "entryCount": 0,
    "existsInTarget": false,
    "id": "8005",
    "isActive": false,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "timeEntries",
    "projectId": "2002",
    "projectName": "Test Project B",
    "start": 2019-06-22T14:00:19.000Z,
    "tagIds": Array [],
    "tagNames": Array [],
    "taskId": null,
    "taskName": null,
    "userGroupIds": Array [],
    "userId": "6001",
    "workspaceId": "1001",
    "year": 2019,
  },
]
`;
